--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: ruby
 rvm:
   - 2.0.0
+  - 2.1
+  - 2.2
+  - 2.3
+  - 2.4.0
 script: bundle exec rspec
 before_install:
   - gem update --system
+  - gem update bundler
 services:
   - redis-server
